@@ -23,6 +23,16 @@ esac], [enable_gcov=false ])
 
 AM_CONDITIONAL(ENABLE_GCOV, test x"$enable_gcov" = "xtrue")
 
+AC_ARG_ENABLE(timeout-tests,
+AC_HELP_STRING([--enable-timeout-tests],[turn off timeout tests]),
+[case "${enableval}" in
+  yes) enable_timeout_tests=true ;;
+  no)  enable_timeout_tests=false ;;
+  *)   AC_MSG_ERROR(bad value ${enableval} for --enable-timeout-tests) ;;
+esac], [enable_timeout_tests=true ])
+
+AM_CONDITIONAL(NO_TIMEOUT_TESTS, test x"$enable_timeout_tests" = "xfalse")
+
 AC_ARG_ENABLE(plain_docdir,
 [  --enable-plain-docdir        don't append version information to docdir],
 [case "${enableval}" in
